--- a/datacenter-project/#src/components/base/_burger-menu.html
+++ b/datacenter-project/#src/components/base/_burger-menu.html
@@ -2,7 +2,7 @@
     <div class="swipe-menu__container">
         <div class="swipe-line" data-swipe-threshold="20" data-swipe-timeout="500" data-swipe-ignore="false">
         </div>
-        <nav class="accordion">
+        <nav class="accordion" aria-label="navigation-accordion">
             <div class="accordion__section">
                 <div class="accordion__header">Компания</div>
                 <ul class="accordion__body">
