--- a/datacenter-project/#src/components/base/_calculator-configurator.html
+++ b/datacenter-project/#src/components/base/_calculator-configurator.html
@@ -20,7 +20,8 @@
                         <div class="result__server"> </div>
                         <div class="horizontal-line"></div>
                         <div class="result__cost"></div>
-                        <a class="button button_colored result__btn" target="_blank">
-                            <span>Добавить в корзину</span></a>
+                        <a href = ' ' class="button button_colored result__btn" target="_blank">
+                            <span>Добавить в корзину</span>
+                        </a>
                     </div>
            </div>
