--- a/datacenter-project/#src/components/base/_calculator.html
+++ b/datacenter-project/#src/components/base/_calculator.html
@@ -7,12 +7,12 @@
             <div class="form__buttons-currency">
                 <div class="buttons-currency">
                     <label class="button-currency__radio" for="byn">
-                        <input type="radio" id="byn" name="currency" value="byn" checked/>
-                        <div class="button-currency__text">BYN</div>
+                        <input type="radio" id="byn" name="currency" value="byn" checked>
+                        <span class="button-currency__text">BYN</span>
                     </label>
                     <label class="button-currency__radio" for="rub">
-                        <input type="radio" id="rub" name="currency" value="rub"/>
-                        <div class="button-currency__text">RUB</div>
+                        <input type="radio" id="rub" name="currency" value="rub">
+                        <span class="button-currency__text">RUB</span>
                     </label>
                 </div>
                 <div class="close-icon">
