--- a/datacenter-project/#src/components/base/_contacts-nav__sales.html
+++ b/datacenter-project/#src/components/base/_contacts-nav__sales.html
@@ -6,7 +6,7 @@
             </div>
         </div>
         <div class="contacts-nav__info">
-            Почта
+            <p class="paragraph">Почта</p>
             <p><span>sales@datahata.by</span></p>
             <a class="button button_bordered contacts-nav__button" href="mailto:sales@datahata.by"><span>Написать письмо</span></a>
         </div>
@@ -17,7 +17,8 @@
                 <img src="img/footer-mob/icons/phone.svg" alt="phone">
             </div>
         </div>
-        <div class="contacts-nav__info"> Телефоны
+        <div class="contacts-nav__info">
+            <p class="paragraph">Телефоны</p>
             <a class="button button_bordered contacts-nav__button" href="tel:+375293086666"><span>+375 29 308 6666</span></a>
             <a class="button button_bordered contacts-nav__button" href="tel:+375333086666"><span>+375 33 308 6666</span></a>
         </div>
@@ -29,7 +30,7 @@
             </div>
         </div>
         <div class="contacts-nav__info">
-            <p>Адрес</p>
+            <p class="paragraph">Адрес</p>
             <address>220019, ул. Колхозная, <br> д. 2-б, Минск, Беларусь.</address>
             <a href="map.html" class="button button_bordered contacts-nav__button"><span>Посмотреть на карте</span></a>
         </div>
