--- a/datacenter-project/#src/components/base/_contacts-nav__support.html
+++ b/datacenter-project/#src/components/base/_contacts-nav__support.html
@@ -6,7 +6,7 @@
             </div>
         </div>
         <div class="contacts-nav__info">
-            Почта
+            <p class="paragraph">Почта</p>
             <p><span>help@datahata.by</span></p>
             <a class="button button_bordered contacts-nav__button" href="mailto:help@datahata.by"><span>Написать письмо</span></a>
         </div>
@@ -18,18 +18,18 @@
             </div>
         </div>
         <div class="contacts-nav__info">
-            Телефоны
+            <p class="paragraph">Телефоны</p>
             <a class="button button_bordered contacts-nav__button" href="tel:+375293096666"><span>+375 29 309 6666</span></a>
             <a class="button button_bordered contacts-nav__button" href="tel:+375333096666"><span>+375 33 3096666</span></a>
         </div>
     </div>
     <div class="contacts-nav__content">
         <div class="contacts-nav__info">
-            Skype
+            <p class="paragraph">Skype</p>
             <p><span>datahata.support</span></p>
         </div>
         <div class="contacts-nav__info">
-            Telegram
+            <p class="paragraph">Telegram</p>
             <p><span><a href="https://t.me/datahata_support_bot" target="_blank">@datahata_support_bot</a></span></p>
         </div>
     </div>
