--- a/datacenter-project/#src/components/base/_navigation.html
+++ b/datacenter-project/#src/components/base/_navigation.html
@@ -1,5 +1,5 @@
-<nav class="footer-navigation">
-    <h3 class="footer-navigation__title">Навигация сайта</h3>
+<nav class="footer-navigation" aria-label="footer-mob-navigation">
+    <p class="footer-mob__title">Навигация сайта</p>
     <ul>
         <li><a href="about.html">Компания</a></li>
         <li><a href="colocation.html">Услуги</a></li>
