--- a/datacenter-project/#src/components/company/details/_details-data.html
+++ b/datacenter-project/#src/components/company/details/_details-data.html
@@ -1,41 +1,41 @@
 <div class="details__info">
-    <p>Общество с ограниченной ответственностью "Датахата"</p>
+    <p class="paragraph">Общество с ограниченной ответственностью "Датахата"</p>
 </div>
 <div class="details__info">
-    <h4>Учетный номер плательщика (УНП):</h4>
-    <p>191445401</p>
+    <p class="paragraph paragraph_bold">Учетный номер плательщика (УНП):</p>
+    <p class="paragraph">191445401</p>
 </div>
 <div class="details__info">
-    <h4>Банковские реквизиты:</h4>
-    <p>BY33BLNB30120000079425000933 (BYN),</p>
-    <p>BY25BLNB30120000079425001840 (USD),</p>
-    <p>BY45BLNB30120000079425001978 (EUR),</p>
-    <p>BY69BLNB30120000079425001643 (RUR).</p>
-    <p> в ОАО "БНБ-Банк", 220012, г. Минск, пр. Независимости, д. 87а</p>
-    <p> БИК: BLNBBY2X</p>
+    <p class="paragraph paragraph_bold">Банковские реквизиты:</p>
+    <p class="paragraph">BY33BLNB30120000079425000933 (BYN),</p>
+    <p class="paragraph">BY25BLNB30120000079425001840 (USD),</p>
+    <p class="paragraph">BY45BLNB30120000079425001978 (EUR),</p>
+    <p class="paragraph">BY69BLNB30120000079425001643 (RUR).</p>
+    <p class="paragraph"> в ОАО "БНБ-Банк", 220012, г. Минск, пр. Независимости, д. 87а</p>
+    <p class="paragraph"> БИК: BLNBBY2X</p>
 </div>
 <div class="details__info">
-    <h4>Наши адреса</h4>
-    <p>Почтовый адрес:</p>
-    <p><span>220019, г. Минск, ул. Колхозная 2б</span></p>
-    <p>Адрес дата-центра:</p>
-    <p><span>г. Минск, ул. Шаранговича 19</span></p>
-    <p>Юридический адрес:</p>
-    <p><span>220013, г. Минск, ул. Я Коласа 37-16</span></p>
+    <p class="paragraph paragraph_bold">Наши адреса</p>
+    <p class="paragraph">Почтовый адрес:</p>
+    <p class="paragraph"><span>220019, г. Минск, ул. Колхозная 2б</span></p>
+    <p class="paragraph">Адрес дата-центра:</p>
+    <p class="paragraph"><span>г. Минск, ул. Шаранговича 19</span></p>
+    <p class="paragraph">Юридический адрес:</p>
+    <p class="paragraph"><span>220013, г. Минск, ул. Я Коласа 37-16</span></p>
 </div>
 <div class="details__info">
-    <h4>Контакты</h4>
-    <p>Телефоны:</p>
-    <p><span>+375 29 308 6666, +375 33 308 6666</span></p>
-    <p>Факс:</p>
-    <p><span>+375 17 388 66 55</span></p>
-    <p>e-mail:</p>
-    <p><span>sales@datahata.by</span></p>
+    <p class="paragraph paragraph_bold">Контакты</p>
+    <p class="paragraph">Телефоны:</p>
+    <p class="paragraph"><span>+375 29 308 6666, +375 33 308 6666</span></p>
+    <p class="paragraph">Факс:</p>
+    <p class="paragraph"><span>+375 17 388 66 55</span></p>
+    <p class="paragraph">e-mail:</p>
+    <p class="paragraph"><span>sales@datahata.by</span></p>
 </div>
 <div class="details__info">
-    <p>Директор - Палышенкова Ирина Валентиновна, действует на основании Устава</p>
+    <p class="paragraph">Директор - Палышенкова Ирина Валентиновна, действует на основании Устава</p>
 </div>
 <div class="details__info">
-    <p>Регистрационный номер ЦОД в БелГИЭ:</p>
-    <p><span>DB410D408ID320110627</span></p>
+    <p class="paragraph">Регистрационный номер ЦОД в БелГИЭ:</p>
+    <p class="paragraph"><span>DB410D408ID320110627</span></p>
 </div>
