--- a/datacenter-project/#src/components/layout/_footer-mob.html
+++ b/datacenter-project/#src/components/layout/_footer-mob.html
@@ -1,6 +1,6 @@
 <footer class="footer-mob">
     <div class="container">
-            <h3 class="footer-mob__title">Контакты</h3>
+        <p class="footer-mob__title">Контакты</p>
         @@include('../base/_contacts-nav__sales.html')
         @@include('../base/_navigation.html')
     </div>
