--- a/datacenter-project/#src/components/layout/_footer.html
+++ b/datacenter-project/#src/components/layout/_footer.html
@@ -2,24 +2,24 @@
     <div class="container layout-2-column">
             <div class="layout-2-column">
                 <div class="footer__content">
-                    <h4 class="footer__title">Контакты</h4>
+                    <p class="footer__title">Контакты</p>
                     <div class="footer__info">
-                        <p>Почта</p>
+                        <p class="paragraph">Почта</p>
                         <a href="mailto:sales@datahata.by" class="contact-data">sales@datahata.by</a>
                     </div>
                     <div class="footer__info">
-                        <p>Телефон</p>
+                        <p class="paragraph">Телефон</p>
                         <a href="tel:+375293086666" class="contact-data">+375 29 308 6666</a><br>
                         <a href="tel:+375333086666" class="contact-data">+375 33 308 6666</a>
                     </div>
                     <div class="footer__info">
-                        <p>Адрес</p>
+                        <p class="paragraph">Адрес</p>
                         <address>220019, ул. Колхозная, <br> д. 2-б, Минск, Беларусь.</address>
                     </div>
                 </div>
                 <div class="footer__content">
-                    <h4 class="footer__title">Навигация сайта</h4>
-                    <nav class="footer__menu">
+                    <p class="footer__title">Навигация сайта</p>
+                    <nav class="footer__menu" aria-label="navigation-footer">
                         <ul>
                             <li><a href="about.html">Компания</a></li>
                             <li><a href="colocation.html">Услуги</a></li>
