--- a/datacenter-project/#src/components/layout/_header.html
+++ b/datacenter-project/#src/components/layout/_header.html
@@ -3,7 +3,7 @@
         <a class="logo logo_header" href="index.html">
             <img src="img/logo/dh.png" alt="logo">
         </a>
-        <nav class="header__navigation">
+        <nav class="header__navigation" aria-label="navigation-header">
             <ul class="navigation">
                 <li class="navigation__menu">Компания
                     <ul class="navigation__menu-sub">
