--- a/datacenter-project/#src/components/main/_advantages.html
+++ b/datacenter-project/#src/components/main/_advantages.html
@@ -1,6 +1,6 @@
 <section class="advantages section-padding">
     <div class="container">
-            <h2 class="advantages__title">Чем мы лучше других?</h2>
+            <h2 class="title title_light">Чем мы лучше других?</h2>
             <div class="layout-3-column">
                 <div class="advantage__card">
                     <div class="advantage__image">
@@ -8,8 +8,8 @@
                             <img src="img/advantages/icons/people.svg" alt="people-icon">
                         </div>
                     </div>
-                    <p class="advantage__title">Индивидуальный подход</p>
-                    <p class="advantage__text">Для нас Вы - уникальны.</p>
+                    <p class="paragraph paragraph_bold">Индивидуальный подход</p>
+                    <p class="paragraph">Для нас Вы - уникальны.</p>
                 </div>
                 <div class="advantage__card">
                     <div class="advantage__image">
@@ -17,8 +17,8 @@
                             <img src="img/advantages/icons/24.svg" alt="time-icon">
                         </div>
                     </div>
-                    <h3 class="advantage__title">Круглосуточная техническая поддержка</h3>
-                    <p class="advantage__text">Мы предоставляем круглосуточную <br> техническую поддержку, а также
+                    <p class="paragraph paragraph_bold">Круглосуточная техническая поддержка</p>
+                    <p class="paragraph">Мы предоставляем круглосуточную <br> техническую поддержку, а также
                         мониторинг работоспособности Вашего оборудования.<br> Наши специалисты сделают всё, что бы
                         Ваши сервисы были доступны 24x7.</p>
                 </div>
@@ -28,8 +28,8 @@
                             <img src="img/advantages/icons/handshake.svg" alt="handshake-icon">
                         </div>
                     </div>
-                    <h3 class="advantage__title">Доброжелательный персонал</h3>
-                    <p class="advantage__text">Наши специалисты отдела продаж и <br>технической службы помогут Вам
+                    <p class="paragraph paragraph_bold">Доброжелательный персонал</p>
+                    <p class="paragraph">Наши специалисты отдела продаж и <br>технической службы помогут Вам
                         подобрать оптимальное для Вас решение.</p>
                 </div>
                 <div class="advantage__card">
@@ -38,8 +38,8 @@
                             <img src="img/advantages/icons/server.svg" alt="server-icon">
                         </div>
                     </div>
-                    <h3 class="advantage__title">Различные варианты размещения оборудования</h3>
-                    <p class="advantage__text">Мы разместим Ваше оборудование <br> независимо от того, каково его
+                    <p class="paragraph paragraph_bold">Различные варианты размещения оборудования</p>
+                    <p class="paragraph">Мы разместим Ваше оборудование <br> независимо от того, каково его
                         исполнение - стоечное или башенное.</p>
                 </div>
                 <div class="advantage__card">
@@ -48,8 +48,8 @@
                             <img src="img/advantages/icons/guard.svg" alt="guard-icon">
                         </div>
                     </div>
-                    <h3 class="advantage__title">Ваша информация под надежной защитой</h3>
-                    <p class="advantage__text">Наш дата-центр находится на закрытой и охраняемой территории, Ваша
+                    <p class="paragraph paragraph_bold">Ваша информация под надежной защитой</p>
+                    <p class="paragraph">Наш дата-центр находится на закрытой и охраняемой территории, Ваша
                         информация <br> будет храниться так же надежно как в <br>швейцарских банках.</p>
                 </div>
             </div>
