--- a/datacenter-project/#src/scss/components/company/details/details.scss
+++ b/datacenter-project/#src/scss/components/company/details/details.scss
@@ -11,14 +11,14 @@
     margin-top: 2rem;
   }
 
-  & > p {
-    margin-bottom: 0.3rem;
-    @include font($size: 2rem, $weight: 400);
-
-    @media (max-width: 420px) {
-      @include font($size: 1.4rem, $weight: 400)
-    }
-  }
+  //& > p {
+  //  margin-bottom: 0.3rem;
+  //  @include font($size: 2rem, $weight: 400);
+  //
+  //  @media (max-width: 420px) {
+  //    @include font($size: 1.4rem, $weight: 400)
+  //  }
+  //}
 
   & > p > span {
     @include font($size: 1.8rem, $weight: 700);
