--- a/datacenter-project/#src/scss/components/info/new-partners.scss
+++ b/datacenter-project/#src/scss/components/info/new-partners.scss
@@ -38,7 +38,7 @@
 .new-partners__container {
     display: flex;
     width: 418px;
-    padding: 3rem 2rem;
+    padding:0  2rem 3rem;
     background-color: $color-light;
     position: absolute;
     left: 50%;
