--- a/datacenter-project/#src/scss/abstarct/placeholders.scss
+++ b/datacenter-project/#src/scss/abstarct/placeholders.scss
@@ -6,7 +6,7 @@
 //тень блоков
 %border-shadow {
   background: $color-light;
-  box-shadow: 0 24px 74px rgba(0, 0, 0, 0.07);
+  box-shadow: 0 24px 74px rgba(0, 0, 0, 0.1);
   border-radius: 20px;
 }
 
@@ -22,10 +22,14 @@
 %gradient-border {
   border: double 1px transparent;
   border-radius: 16px;
-  background-image: linear-gradient(white, white), radial-gradient(circle at left bottom, #ea5c2f, #f3b921);
+  background-image:linear-gradient(90deg, #EA5C2F 0%, #F3B921 100%);
   background-origin: border-box;
   background-clip: content-box, border-box;
 }
+
+
+
+
 
 
 %gradient-text{
