--- a/datacenter-project/#src/scss/base/base.scss
+++ b/datacenter-project/#src/scss/base/base.scss
@@ -3,12 +3,11 @@ html {
 }
 
 body {
-  font-family: "futura-pt";
+  font-family: "futura-pt", serif;
   font-weight: 400;
-  font-size: 1.4rem;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   width: 100%;
   height: 100%;
+
 }
 
 
@@ -97,8 +96,6 @@ h4 {
   &_light{
     color: $color-light;
   }
-
-
 
 }
 
