--- a/datacenter-project/#src/scss/base/calculator.scss
+++ b/datacenter-project/#src/scss/base/calculator.scss
@@ -229,7 +229,7 @@
   .button-currency__text:before {
     content: "";
     position: absolute;
-    top: -3px;
+    top: 0;
     left: 0;
     width: 22px;
     height: 22px;
@@ -242,6 +242,7 @@
   .button-currency__text:after {
     content: "";
     position: absolute;
+    top: 3px;
     left: 3px;
     width: 16px;
     height: 16px;
