--- a/datacenter-project/#src/scss/components/main/advantages.scss
+++ b/datacenter-project/#src/scss/components/main/advantages.scss
@@ -6,11 +6,7 @@
     background-size: cover;
 }
 
-    .advantages__title {
-        text-align: center;
-        color: $color-light;
-        margin-bottom: 4rem;
-    }
+
 
 
 
@@ -25,9 +21,14 @@
     padding: 2.5rem 1.5rem;
     margin-bottom: 1.7rem;
 
+    & > p{
+        color: $color-light;
+        text-align: center;
+    }
+
     @media (max-width: 420px) {
         padding: 1.3rem 1.7rem 2rem 1.7rem;
-        align-items: flex-start;
+        //align-items: flex-start;
     }
 
     .advantage__image {
@@ -87,29 +88,29 @@
     }
 }
 
-.advantage__title {
-    margin-top: 2.5rem;
-    @include font($size: 2.4rem);
-    font-size: 2.4rem;
-    color: $color-light;
-    text-align: center;
-
-    @media (max-width: 420px) {
-        margin-top: 1.3rem;
-        @include font($size: 1.8rem);
-        text-align: left;
-    }
-}
-
-.advantage__text {
-    margin-top: 1.7rem;
-    @include font($size: 1.6rem, $height: 160%, $weight: 400);
-    color: $color-light;
-    text-align: center;
-
-    @media (max-width: 420px) {
-        margin-top: 0.8rem;
-        @include font($size: 1.4rem, $height: 160%, $weight: 400);
-        text-align: left;
-    }
-}
+//.advantage__title {
+//    margin-top: 2.5rem;
+//    @include font($size: 2.4rem);
+//    font-size: 2.4rem;
+//    color: $color-light;
+//    text-align: center;
+//
+//    @media (max-width: 420px) {
+//        margin-top: 1.3rem;
+//        @include font($size: 1.8rem);
+//        text-align: left;
+//    }
+//}
+//
+//.advantage__text {
+//    margin-top: 1.7rem;
+//    @include font($size: 1.6rem, $height: 160%, $weight: 400);
+//    color: $color-light;
+//    text-align: center;
+//
+//    @media (max-width: 420px) {
+//        margin-top: 0.8rem;
+//        @include font($size: 1.4rem, $height: 160%, $weight: 400);
+//        text-align: left;
+//    }
+//}
