--- a/datacenter-project/#src/scss/components/main/promo.scss
+++ b/datacenter-project/#src/scss/components/main/promo.scss
@@ -7,6 +7,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 100% 100%;
+  background-color: transparent;
 
   @media (max-width: 1025px) {
     padding: 173px 0 254px;
