--- a/datacenter-project/#src/scss/components/main/review.scss
+++ b/datacenter-project/#src/scss/components/main/review.scss
@@ -59,8 +59,10 @@
 }
 
 .card-inner__title{
-    @include font($size: 1.6rem);
+    @include font($size: 1.6rem, $height: 160%);
 }
+
+
 
 .limiter {
     display: -webkit-box;
