--- a/datacenter-project/#src/components/base/_contacts-nav__support.html
+++ b/datacenter-project/#src/components/base/_contacts-nav__support.html
@@ -2,7 +2,7 @@
     <div class="contacts-nav__content">
         <div class="contacts-nav__image">
             <div class="contacts-nav__image-layer">
-                <img src="img/footer-mob/icons/post.svg" alt="post">
+                <div class="image-layer__img image-layer__img_post"></div>
             </div>
         </div>
         <div class="contacts-nav__info">
@@ -14,7 +14,7 @@
     <div class="contacts-nav__content">
         <div class="contacts-nav__image">
             <div class="contacts-nav__image-layer">
-                <img src="img/footer-mob/icons/phone.svg" alt="phone">
+                <div class="image-layer__img image-layer__img_phone"></div>
             </div>
         </div>
         <div class="contacts-nav__info">
