--- a/datacenter-project/#src/components/layout/_header.html
+++ b/datacenter-project/#src/components/layout/_header.html
@@ -1,7 +1,7 @@
 <header class="header">
     <div class="container header-container">
         <a class="logo logo_header" href="index.html">
-            <img src="img/logo/dh.png" alt="logo">
+            <img src="img/logo/dh.png" alt="logo" width="114" height="41">
         </a>
         <nav class="header__navigation" aria-label="navigation-header">
             <ul class="navigation">
