--- a/datacenter-project/#src/components/main/_advantages.html
+++ b/datacenter-project/#src/components/main/_advantages.html
@@ -5,7 +5,7 @@
                 <div class="advantage__card">
                     <div class="advantage__image">
                         <div class="image__layer">
-                            <img src="img/advantages/icons/people.svg" alt="people-icon">
+                            <div class="image__layer-img image__layer-img_people"></div>
                         </div>
                     </div>
                     <p class="paragraph paragraph_bold">Индивидуальный подход</p>
@@ -14,7 +14,7 @@
                 <div class="advantage__card">
                     <div class="advantage__image">
                         <div class="image__layer">
-                            <img src="img/advantages/icons/24.svg" alt="time-icon">
+                            <div class="image__layer-img image__layer-img_24"></div>
                         </div>
                     </div>
                     <p class="paragraph paragraph_bold">Круглосуточная техническая поддержка</p>
@@ -25,7 +25,7 @@
                 <div class="advantage__card">
                     <div class="advantage__image">
                         <div class="image__layer">
-                            <img src="img/advantages/icons/handshake.svg" alt="handshake-icon">
+                            <div class="image__layer-img image__layer-img_handshake"></div>
                         </div>
                     </div>
                     <p class="paragraph paragraph_bold">Доброжелательный персонал</p>
@@ -35,7 +35,7 @@
                 <div class="advantage__card">
                     <div class="advantage__image">
                         <div class="image__layer">
-                            <img src="img/advantages/icons/server.svg" alt="server-icon">
+                            <div class="image__layer-img image__layer-img_server"></div>
                         </div>
                     </div>
                     <p class="paragraph paragraph_bold">Различные варианты размещения оборудования</p>
@@ -45,7 +45,7 @@
                 <div class="advantage__card">
                     <div class="advantage__image">
                         <div class="image__layer">
-                            <img src="img/advantages/icons/guard.svg" alt="guard-icon">
+                            <div class="image__layer-img image__layer-img_guard"></div>
                         </div>
                     </div>
                     <p class="paragraph paragraph_bold">Ваша информация под надежной защитой</p>
