--- a/datacenter-project/#src/components/base/_burger-menu.html
+++ b/datacenter-project/#src/components/base/_burger-menu.html
@@ -45,27 +45,29 @@
             <p class="swipe-menu__title">Продажи и обслуживание клиентов</p>
             <div class="swipe-menu__buttons">
                 <a class="button-circle button-circle_bordered" href="mailto:sales@datahata.by">
-                    <img alt="mail" src="img/header/icons/mail.svg">
+                    <img alt="mail" src="img/header/icons/mail.svg" width="26" height="26">
                 </a>
                 <a class="button-circle button-circle_bordered swipe-menu__button-phone" href="tel:+375293086666">
-                    <img src="img/header/icons/phone-down.svg" alt="phone-a1">
+                    <img src="img/header/icons/phone-down.svg" alt="phone-a1" width="32" height="17">
                     <span>A1</span>
                 </a>
                 <a class="button-circle button-circle_bordered swipe-menu__button-phone" href="tel:+375333086666">
-                    <img src="img/header/icons/phone-down.svg" alt="phone-mts">
+                    <img src="img/header/icons/phone-down.svg" alt="phone-mts" width="32" height="17">
                     <span>MTC</span>
                 </a>
             </div>
             <p class="swipe-menu__title">Техническая поддержка 24/7</p>
             <div class="swipe-menu__buttons">
-                <a class="button-circle button-circle_bordered" href="https://t.me/datahata_support_bot"><img src="img/header/icons/telegram.svg" alt="telegram"></a>
-                <a class="button-circle button-circle_bordered" href="mailto:help@datahata.by"><img src="img/header/icons/mail.svg" alt="mail"></a>
+                <a class="button-circle button-circle_bordered" href="https://t.me/datahata_support_bot">
+                    <img src="img/header/icons/telegram.svg" alt="telegram" width="24" height="24"></a>
+                <a class="button-circle button-circle_bordered" href="mailto:help@datahata.by">
+                    <img src="img/header/icons/mail.svg" alt="mail" width="26" height="26"></a>
                 <a class="button-circle button-circle_bordered swipe-menu__button-phone" href="tel:+375293096666">
-                    <img src="img/header/icons/phone-down.svg" alt="phone-a1">
+                    <img src="img/header/icons/phone-down.svg" alt="phone-a1" width="32" height="17">
                     <span>A1</span>
                 </a>
                 <a class="button-circle button-circle_bordered swipe-menu__button-phone" href="tel:+375333096666">
-                    <img src="img/header/icons/phone-down.svg" alt="phone-mts">
+                    <img src="img/header/icons/phone-down.svg" alt="phone-mts" width="32" height="17">
                     <span>MTC</span>
                 </a>
             </div>
