--- a/datacenter-project/#src/scss/base/contacts_nav.scss
+++ b/datacenter-project/#src/scss/base/contacts_nav.scss
@@ -13,32 +13,32 @@
 }
 
 .contacts-nav__image {
-  width: 168px;
-  height: 168px;
-  border-radius: 50%;
-  background: rgba(62, 119, 187, 0.2);
-  background: linear-gradient(90deg, rgba(31, 120, 224, 0.2) 0%, rgba(0, 194, 255, 0.2) 100%);
-  position: relative;
+  @include image-first-layer(168px, 168px);
 }
 
 .contacts-nav__image-layer {
-  width: 136px;
-  height: 136px;
-  border-radius: 50%;
-  @extend %bg-color-primary;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  @include image-second-layer(136px, 136px, $color-primary, $color-primary);
+}
 
-  img {
-    width: 100%;
-    max-width: 78px;
-    height: auto;
+.image-layer__img{
+  width: 78px;
+  height: 78px;
+  background-repeat: no-repeat;
+  background-position: center;
+
+  &_phone{
+    background-image: url("../img/footer-mob/icons/phone.svg");
+
   }
+
+  &_post{
+    background-image: url("../img/footer-mob/icons/post.svg");
+  }
+
+  &_map{
+    background-image: url("../img/footer-mob/icons/map.svg");
+  }
+
 }
 
 .contacts-nav__info {
