fix: fix total sum

--- a/datacenter-project/#src/components/base/_calculator-configurator.html
+++ b/datacenter-project/#src/components/base/_calculator-configurator.html
@@ -20,8 +20,8 @@
                         <div class="result__server"> </div>
                         <div class="horizontal-line"></div>
                         <div class="result__cost"></div>
-                        <a href = ' ' class="button button_colored result__btn" target="_blank">
+                        <button class="button button_colored result__btn">
                             <span>Добавить в корзину</span>
-                        </a>
+                        </button>
                     </div>
            </div>
