fix: fixed style

--- a/datacenter-project/#src/components/base/_contacts-nav__support.html
+++ b/datacenter-project/#src/components/base/_contacts-nav__support.html
@@ -30,7 +30,7 @@
         </div>
         <div class="contacts-nav__info">
             <p class="paragraph">Telegram</p>
-            <p><span><a href="https://t.me/datahata_support_bot" target="_blank">@datahata_support_bot</a></span></p>
+            <p><span><a class="link link_dark" href="https://t.me/datahata_support_bot" target="_blank">@datahata_support_bot</a></span></p>
         </div>
     </div>
 </div>
