--- a/datacenter-project/#src/components/company/about/_about-us__cards.html
+++ b/datacenter-project/#src/components/company/about/_about-us__cards.html
@@ -1,32 +1,22 @@
             <div class="about-us__cards layout-3-column">
                 <div class="card">
-                    <div class="card__image">
-                        <img src="img/about-us/icons/calendar.svg" alt="calendar">
-                    </div>
+                    <div class="card__image card__image_calendar"></div>
                     <p class="card__description">Введен в эксплуатацию <span>в 1 квартале 2011 года.</span></p>
                 </div>
                 <div class="card">
-                    <div class="card__image">
-                        <img src="img/about-us/icons/square.svg" alt="square">
-                    </div>
+                    <div class="card__image card__image_square"></div>
                     <p class="card__description">Общая площадь дата-центра составляет <span>100 кв.м.</span></p>
                 </div>
                 <div class="card">
-                    <div class="card__image">
-                        <img src="img/about-us/icons/plug.svg" alt="plug for socket">
-                    </div>
+                    <div class="card__image card__image_plug"></div>
                     <p class="card__description">Средняя электрическая мощность одной стойки <span>– 5 кВт.</span></p>
                 </div>
                 <div class="card">
-                    <div class="card__image">
-                        <img src="img/about-us/icons/build.svg" alt="build">
-                    </div>
+                    <div class="card__image card__image_build"></div>
                     <p class="card__description">Расположен на цокольном уровне, <span>в охраняемом здании.</span></p>
                 </div>
                 <div class="card">
-                    <div class="card__image">
-                        <img src="img/about-us/icons/guard.svg" alt="guard">
-                    </div>
+                    <div class="card__image card__image_guard"></div>
                     <p class="card__description">Резервирование всех модулей по схеме <span>N+1.</span></p>
                 </div>
             </div>
