--- a/datacenter-project/#src/components/company/contacts/_contacts.html
+++ b/datacenter-project/#src/components/company/contacts/_contacts.html
@@ -6,8 +6,8 @@
                 <h4>Отдел продаж</h4>
                 <div class="contact">
                     Телефоны
-                    <p><span><a href="tel:+375293086666" target="_blank">+375 29 308 6666 (A1)</a></span></p>
-                    <p><span><a href="tel:+375333086666" target="_blank">+375 33 308 6666 (MTC)</a></span></p>
+                    <p><span><a class="link link_dark" href="tel:+375293086666" target="_blank">+375 29 308 6666 (A1)</a></span></p>
+                    <p><span><a class="link link_dark" href="tel:+375333086666" target="_blank">+375 33 308 6666 (MTC)</a></span></p>
                 </div>
                 <div class="contact">
                     Факс
@@ -23,7 +23,7 @@
                 </div>
                 <div class="contact">
                     Почта
-                    <p><span><a href="mailto:sales@datahata.by" target="_blank">sales@datahata.by</a></span></p>
+                    <p><span><a class="link link_dark" href="mailto:sales@datahata.by" target="_blank">sales@datahata.by</a></span></p>
                 </div>
                 <div class="contact">
                     Время работы
