--- a/datacenter-project/#src/components/info/_newpartners.html
+++ b/datacenter-project/#src/components/info/_newpartners.html
@@ -17,7 +17,7 @@
                     <li>Участвуют все услуги дата-центра;</li>
                     <li>Получение реального дохода.</li>
                 </ul>
-                <p class="paragraph">Напишите нам на <a href="mailto:sales@datahata.by">sales@datahata.by </a>и узнайте
+                <p class="paragraph">Напишите нам на <a class="link link_light" href="mailto:sales@datahata.by">sales@datahata.by </a>и узнайте
                     подробности
                     партнерской программы. </p>
                 <button class="button button_colored partners-btn"><span>Стать партнёром</span></button>
