--- a/datacenter-project/#src/components/layout/_header.html
+++ b/datacenter-project/#src/components/layout/_header.html
@@ -42,7 +42,7 @@
                         <li class="navigation__title">Отдел продаж: работа с новымы и существующими клиентами</li>
                         <li>
                             <a class="menu-sub__link link-contact link-contact_color" href="mailto:sales@datahata.by">
-                                <img class="icon icon_contact" src="img/header/icons/mail.svg" alt="mail">
+                                <img class="icon icon_contact" src="img/header/icons/mail.svg" alt="mail" width="26" height="26">
                                 sales@datahata.by
                             </a>
                         </li>
@@ -51,11 +51,11 @@
                         <li class="horizontal-line"></li>
                         <li class="navigation__title">Техническая поддержка 24/7 для существующих клиентов</li>
                         <li><a class="menu-sub__link link-contact link-contact_color" href="https://t.me/datahata_support_bot">
-                            <img class="icon icon_contact" src="img/header/icons/telegram.svg" alt="telegram">datahata_support_bot</a></li>
+                            <img class="icon icon_contact" src="img/header/icons/telegram.svg" alt="telegram" width="24" height="24">datahata_support_bot</a></li>
 
                         <li><a class="menu-sub__link link-contact link-contact_color"
                                href="mailto:help@datahata.by">
-                            <img class="icon icon_contact" src="img/header/icons/mail.svg" alt="mail">help@datahata.by</a></li>
+                            <img class="icon icon_contact" src="img/header/icons/mail.svg" alt="mail" width="26" height="26">help@datahata.by</a></li>
                         <li><a class="menu-sub__link link-contact" href="tel:+375293096666">+375 29 309 6666</a></li>
                         <li><a class="menu-sub__link link-contact" href="tel:+375333096666">+375 33 309 6666</a></li>
                     </ul>
