--- a/datacenter-project/#src/components/services/colo/_colo-subscription.html
+++ b/datacenter-project/#src/components/services/colo/_colo-subscription.html
@@ -8,5 +8,5 @@
             рублей, исходящего 1 Gb составит 0,1 рублей.
         </li>
     </ul>
-    <p class="paragraph">Инструкция: <a href="instruction.html">Как разместить сервер</a></p>
+    <p class="paragraph">Инструкция: <a class="link link_light" href="instruction.html">Как разместить сервер</a></p>
 </div>
