--- a/datacenter-project/#src/scss/abstarct/variable.scss
+++ b/datacenter-project/#src/scss/abstarct/variable.scss
@@ -3,6 +3,7 @@ $color-secondary:  #172433;
 $color-light-grey: #f8f8f8;
 $color-light: #fff;
 $color-dark: #000;
+$color-link: #0f4d96;
 $color-disabled: rgba(0, 0, 0, 0.34);
 $color-gradient-primary: #ea5c2f;
 $color-gradient-secondary: #f3b921;
