--- a/datacenter-project/#src/components/services/dedic/_dedicated.html
+++ b/datacenter-project/#src/components/services/dedic/_dedicated.html
@@ -51,7 +51,7 @@
                 <div class="accordion__body">
                     <div class="services__content">
                         <p class="paragraph">Мы подберем оптимальную для вас конфигурацию сервера. Для уточнения
-                            параметров и цен - <a href="contacts.html">свяжитесь с нами</a>.</p>
+                            параметров и цен - <a class="link link_light" href="contacts.html">свяжитесь с нами</a>.</p>
                     </div>
                 </div>
             </div>
