--- a/datacenter-project/#src/scss/abstarct/placeholders.scss
+++ b/datacenter-project/#src/scss/abstarct/placeholders.scss
@@ -22,7 +22,7 @@
 %gradient-border {
   border: double 1px transparent;
   border-radius: 16px;
-  background-image:linear-gradient(90deg, #EA5C2F 0%, #F3B921 100%);
+  background-image: linear-gradient(white, white), radial-gradient(circle at left bottom, #ea5c2f, #f3b921);
   background-origin: border-box;
   background-clip: content-box, border-box;
 }
