fix: delete margin in review paragraph

--- a/datacenter-project/#src/scss/components/main/review.scss
+++ b/datacenter-project/#src/scss/components/main/review.scss
@@ -72,7 +72,9 @@
     -webkit-box-orient: vertical;
     text-overflow: ellipsis;
 
-
+    & > p{
+        margin: 0;
+    }
 
     @media (max-width: 420px) {
         max-height: 182px;
