--- a/datacenter/layouts/_default/services.html
+++ b/datacenter/layouts/_default/services.html
@@ -6,7 +6,7 @@
             {{ range .Pages }}
             <div class="accordion__section">
                 <div class="accordion__header">
-                    <p>{{.Params.TitleAccordion}}</p>
+                    <p>{{.Params.ContentTitle}}</p>
                     <div class="button__arrow {{.Params.ClassForButton}}"></div>
                 </div>
                 <div class="accordion__body {{.Params.Class}}">
